k8s/service-celery.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs-backend-celery-service
spec:
  selector:
    app: cs-backend-celery
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8020
