k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs-backend-service
spec:
  selector:
    app: cs-backend
  ports:
    - name: http
      port: 80
      targetPort: 8000
