k8s/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cs
  name: cs2.game.ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - cs2.game
    secretName: cs2.game
  rules:
  - host: "cs2.game"
    http:
      paths:
      - pathType: Prefix
        path: "/backend/"
        backend:
          service:
            name: cs-backend-service
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: csgo-frontend-service
            port:
              number: 80
  ingressClassName: nginx
